    + [NT] Apply patch from Samuel Bronson to bump severity
      (but decrease certainty) of the "not linked against
      libc" tags.  (Closes: #698720)
  * checks/cruft:
    + [NT] Do not emit the license-problem-json-evil tag for
      non-free packages.
    + [NT] Apply patch from Bastien Roucariès to catch GFDL
      licenses with invariants (etc.).  (Closes: #695967)
  * checks/fields{,.desc}:
    + [NT] Apply patch from Samuel Bronson to detect some
      broken or poor Vcs URLs.  Also thanks to James McCoy for
      his report.  (Closes: #652595)
    + [JW] Reduce severity of b-d-on-python-dev-with-no-arch-any
      to minor.
  * checks/files{,.desc}:
    + [NT] Apply patch from Bastien Roucariès to catch paths
      in (common) build dirs.  (Closes: #678857)
    + [NT] Do not suggest the use of "virtual package" as a way
      to suppress empty-binary-package.  Lintian will still
      accept it the phrase for now.
    + [NT] Accept libx32 as an bi-arch directory.
    + [NT] Ignore gzipped lintian overrides when checking whether
      a package is empty.
    + [NT] Fix typo of Pre-Depends, thanks to Raúl Benencia for
      spotting it.  (Closes: #699452)
  * checks/init.d:
    + [NT] Fix regression where Lintian would not properly match
      init.d passed to update-rc.d.  Thanks to Michael Meskes for
      reporting.  (Closes: #698602)
  * checks/menu-format{,.desc}:
    + [NT] Apply patch from Bastien Roucariès to detect missing
      "Keywords" in desktop files.  Thanks to Jeremy Bicha for
      the report.  (Closes: #693918)
    + [NT] Apply patch from Matthias Klumpp to add missing
      "Science" category.  (Closes: #697693)
    + [NT] Apply patch from Thomas Preud'homme to detect uses of
      relative icons in menu files.  (Closes: #697916)
  * checks/patch-systems{,.desc}:
    + [NT] Retire unneeded-build-dep-on-quilt, it is only a pedantic
      tag and apparently not too accurate.  Thanks to Charles Plessy