@@ -172,7 +172,8 @@ if ($type ne 'udeb') {
     if ($lines == 0) {
         tag 'extended-description-is-empty';
     } elsif ($lines <= 2 and not $synopsis =~ /(dummy|transition)/i) {
-        tag 'extended-description-is-probably-too-short';
+        tag 'extended-description-is-probably-too-short'
+            unless $info->is_pkg_class ('any-meta');
     } elsif ($description =~ /^ \.\s*\n|\n \.\s*\n \.\s*\n|\n \.\s*\n?$/) {
         tag 'extended-description-contains-empty-paragraph';
     }
