@@ -18,8 +18,7 @@ Conflicts: package-with-version (<< 3.0), conflict-dep
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
- things.  It should not be installed like a regular package.  It may
- be an empty package.
+ things.  It should not be installed like a regular package.
 
 Package: lib{$srcpkg}
 Architecture: {$architecture}
