@@ -40,12 +40,17 @@ lintian (2.5.12) UNRELEASED; urgency=low
       non-free packages.
     + [NT] Apply patch from Bastien Roucariès to catch GFDL
       licenses with invariants (etc.).  (Closes: #695967)
+  * checks/description:
+    + [NT] Ignore "extended-description-is-probably-too-short"
+      for metapackages.  Thanks to Axel Beckert for the
+      report.
   * checks/fields{,.desc}:
     + [NT] Apply patch from Samuel Bronson to detect some
       broken or poor Vcs URLs.  Also thanks to James McCoy for
       his report.  (Closes: #652595)
     + [JW] Reduce severity of b-d-on-python-dev-with-no-arch-any
       to minor.
+    + [NT] Skip "depends-on-packaging-dev" for metapackages.
   * checks/files{,.desc}:
     + [NT] Apply patch from Bastien Roucariès to catch paths
       in (common) build dirs.  (Closes: #678857)
@@ -154,6 +159,9 @@ lintian (2.5.12) UNRELEASED; urgency=low
     + [NT] Re-instate the "TEXTREL" marker.  This fixes a regression
       where shared-libs compiled without pic was not reported.
       Thanks to Dmitry Shachnev for the assistance in debugging this.
+    + [NT] Recognise packages in section "metapackages" as a
+      metapackage.  Thanks to Axel Beckert for the report.
+      (Closes: #698610)
   * lib/Lintian/Command/Simple.pm:
     + [NT] Use constant time lookup access instead of linear scan with
       "hashref" wait.
